--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,2 +1,20 @@
-<h1>Categories#index</h1>
-<p>Find me in app/views/categories/index.html.erb</p>
+<section class="category-section">
+    <div class="category-container"> 
+        <nav class="navbar flex justify-between items-center w-[100%] px-3 py-5">
+            <span class="material-symbols-outlined icon text-2xl text-white">menu</span>
+            <h2 class=" text-2xl font-semibold text-white">CATEGORIES</h2>
+<%= link_to sign_out_user_path, class: "text-white" do %>
+  <span class="material-icons-outlined icon text-2xl">exit_to_app</span> Logout
+<% end %>
+            <%# <span class="material-symbols-outlined icon text-2xl text-white">logout</span> %>
+        </nav>
+
+        <main class="main-body h-[70vh]">
+
+        </main>
+
+        <div class="add-category-container flex justify-center px-5 py-7">
+            <%= link_to "ADD CATEGORY", new_category_path , class: ' border border-white text-center px-7 text-white py-3 w-[80%]'%>
+        </div>
+    </div>
+</section>
