--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,13 +1,6 @@
 <section class="category-section">
     <div class="category-container"> 
-        <nav class="navbar flex justify-between items-center w-[100%] px-3 py-5">
-            <span class="material-symbols-outlined icon text-2xl text-white">menu</span>
-            <h2 class=" text-2xl font-semibold text-white">CATEGORIES</h2>
-<%= link_to sign_out_user_path, class: "text-white" do %>
-  <span class="material-icons-outlined icon text-2xl">exit_to_app</span> Logout
-<% end %>
-            <%# <span class="material-symbols-outlined icon text-2xl text-white">logout</span> %>
-        </nav>
+        <%= render "shared/header"%>
 
         <main class="main-body h-[70vh]">
 
