Add style for create page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -52,7 +52,7 @@
     background-color: #5fb523;
  }
 
- #category_city {
+ #category_icon {
    padding: 10px;
     display: block;
     margin: 10px auto;
