Update head.html.erb file to use it for every header

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,6 +1,6 @@
 <section class="category-section">
     <div class="category-container"> 
-        <%= render "shared/header"%>
+        <%= render "shared/head", title: 'categories', back: false%>
 
         <% if @categories.empty?%>
             <h1>There is no categoies...</h1>
