--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,6 +1,6 @@
 <section class="category-section">
     <div class="category-container">
-        <%= render "shared/add_category_header"%>
+        <%= render "shared/head", title: "add category", back: true %>
     </div>
     <% if flash[:notice].present? %>
         <div class="notice">
