--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar flex justify-between items-center w-[100%] px-3 py-5">
         <% if back%>
-            <%= link_to categories_path, class: "text-white text-2xl" do%>
-            <i class="fas fa-angle-left text-2xl text-white"></i>
+          <%= link_to("javascript:history.back()", class: "text-white text-2xl") do %>
+    <i class="fas fa-angle-left text-2xl text-white"></i>
         <% end %>
         <% else%>
             <i class="fa-solid fa-bars text-2xl text-white"></i>
@@ -11,6 +11,12 @@
     <%= link_to sign_out_user_path, class: "text-white text-2xl" do %>
     <i class="fa-solid fa-arrow-right-from-bracket" style="color: #fcfcfc;"></i>
     <% end %>
+
+    <% elsif title = "purchases" %>
+    <%= link_to sign_out_user_path, class: "text-white text-2xl" do %>
+    <i class="fa-solid fa-arrow-right-from-bracket" style="color: #fcfcfc;"></i>
+    <% end %>
+
 <% elsif title = "register" %>
     <%= link_to new_user_session_path, class: "text-white text-2xl" do %>
         <span class="text-[18px] font-normal">Next</span>
