--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -9,6 +9,6 @@
     </div>
 
     <div class="add-category-container flex justify-center px-5 py-7">
-            <%= link_to "ADD PURCHASE", new_category_purchase_path , class: ' border border-white text-center px-7 text-white py-3 w-[80%]'%>
+            <%= link_to "ADD PURCHASE", new_category_purchase_path(category_id: @category.id) , class: ' border border-white text-center px-7 text-white py-3 w-[80%]'%>
         </div>
  </section>
