Add data in purchase index list view page

--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -1,10 +1,36 @@
  <%= render "shared/head", title: 'purchases', back: true%>
  <section class="purchase-section"> 
-    <div class="purchase-container h-[70vh] bg-gray-100 pt-5"> 
+    <div class="purchase-container min-h-[80vh]   bg-gray-100 pt-5"> 
         <% if @purchases.empty? %>
             <h2 class="text-center"> There is no purchase for this category </h2>
         <% else %>
-            <h1>There is purchase</h1>
+            <ul class="category-container min-h-80 bg-gray-100 pt-5">
+
+             <li class="category-list w-[90%] mx-auto flex items-center justify-between shadow-lg px-3 py-5  my-5 bg-white">
+                            <div class="text-4xl me-4"><%= @category.icon %></div>
+                                <div class="text-lg opacity-[0.8] font-semibold"><%= @category.name %></div> 
+                                <div><i class="fas fa-trash text-red-500"></i></div>
+                        </li>
+                <% @purchases.each do |purchase| %>
+                        <li class="category-list w-[90%] mx-auto items-center  shadow-lg px-3 py-5  my-5 bg-white">
+                                <div class="card-body flex justify-between items-center p-1">
+                                    <span class="uppercase text-gray-500 font-semibold"><%= purchase.name %></span>
+                                    <span class="font-semibold text-lg">$<%= purchase.amount %></span>
+                                </div>
+                                <div class="card-footer flex justify-between items-center p-1">
+                                    <span class="uppercase text-gray-500 font-semibold"><%= purchase.created_at.strftime('%d-%m-%Y') %></span>
+                                <i class="fas fa-trash text-red-500"></i>
+                                </div>
+                        </li>
+                <% end %>
+
+                <li class="category-list w-[90%] mx-auto flex items-center justify-between shadow-lg px-3 py-5  my-5 bg-white">
+                           
+                           <h2 class="font-semibold text-lg">Total Amount:</h2>
+                           <span class="font-semibold text-lg">$<%= @total %></span>
+                           
+                        </li>
+            </ul>
         <% end %>
     </div>
 
