--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -18,19 +18,20 @@
                                 <li class="category-list w-[90%] mx-auto items-center  shadow-lg px-3 py-5  my-5 bg-white">
                                         <div class="card-body flex justify-between items-center p-1">
                                             <span class="uppercase text-gray-500 font-semibold"><%= purchase.name %></span>
-                                            <span class="font-semibold text-lg">$<%= purchase.amount %></span>
+                                            <span class="font-semibold text-lg">$<%=  format('%.2f',purchase.amount)  %></span>
                                         </div>
                                         <div class="card-footer flex justify-between items-center p-1">
                                             <span class="uppercase text-gray-500 font-semibold"><%= purchase.created_at.strftime('%d-%m-%Y') %></span>
-                                       <%= button_to "delete", category_purchase_path(@category, purchase), method: :delete, class: 'px-3 py-1 bg-red-500 rounded-md text-white hover:bg-red-700' %>
-
+                                       <%= button_to  category_purchase_path(@category, purchase), method: :delete, class: '' do %>
+                                            <i class="fas fa-trash text-red-500 text-2xl"></i>
+                                        <% end %>
                                         </div>
                                 </li>
                         <% end %>
 
                          <li class="category-list w-[90%] mx-auto flex items-center justify-between shadow-lg px-3 py-5  my-5 bg-white">
                             <h2 class="font-semibold text-lg">Total Amount:</h2>
-                            <span class="font-semibold text-lg">$<%= @total %></span>
+                            <span class="font-semibold text-lg">$<%= format('%.2f',@total) %></span>
                         </li>
             </ul>
         <% end %>
