--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -1,29 +1,43 @@
 <nav class="navbar flex justify-between items-center w-[100%] px-3 py-5">
         <% if back%>
           <%= link_to("javascript:history.back()", class: "text-white text-2xl") do %>
-    <i class="fas fa-angle-left text-2xl text-white"></i>
+            <i class="fas fa-angle-left text-2xl text-white"></i>
         <% end %>
         <% else%>
             <i class="fa-solid fa-bars text-2xl text-white"></i>
         <% end%>
+
+
             <h2 class=" text-2xl font-semibold text-white uppercase"><%=  title%></h2>
+
+
 <% if title == "categories"%>
     <%= link_to sign_out_user_path, class: "text-white text-2xl" do %>
     <i class="fa-solid fa-arrow-right-from-bracket" style="color: #fcfcfc;"></i>
     <% end %>
 
-    <% elsif title = "purchases" %>
-    <%= link_to sign_out_user_path, class: "text-white text-2xl" do %>
-    <i class="fa-solid fa-arrow-right-from-bracket" style="color: #fcfcfc;"></i>
+    <% elsif title == "purchases" %>
+            <%= link_to sign_out_user_path, class: "text-white text-2xl" do %>
+            <i class="fa-solid fa-arrow-right-from-bracket" style="color: #fcfcfc;"></i>
     <% end %>
 
-<% elsif title = "register" %>
-    <%= link_to new_user_session_path, class: "text-white text-2xl" do %>
+    <% elsif title == "register"  %>
+        <%= link_to new_user_session_path, class: "text-white text-2xl" do %>
         <span class="text-[18px] font-normal">Next</span>
     <% end %>
-<% else %>
-    <%= link_to sign_out_user_path, class: "text-white text-2xl" do %>
-    <i class="fa-solid fa-arrow-right-from-bracket" style="color: #fcfcfc;"></i>
+
+
+    <% elsif title ==  "login"  %>
+         <%= link_to new_user_registration_path, class: "text-white text-2xl" do %>
+        <span class="fas fa-user-plus"></span>
     <% end %>
-<% end %>
-        </nav>
+
+
+    <% else %>
+
+        <%= link_to sign_out_user_path, class: "text-white text-2xl" do %>
+        <i class="fa-solid fa-arrow-right-from-bracket" style="color: #fcfcfc;"></i>
+        <% end %>
+    <% end %>
+
+    </nav>
