--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -61,3 +61,37 @@
     font-size: 20px;
  }
 
+ .sidenav {
+   height: 100%;
+   width: 0;
+   position: fixed;
+   z-index: 1;
+   top: 0;
+   left: 0;
+   background: linear-gradient(to bottom, #0a4486, #3778c2);
+   overflow-x: hidden;
+   transition: 0.5s;
+   opacity: 0.9;
+   backdrop-filter: blur(5px);
+ }
+ 
+ .sidenav a {
+   padding: 8px 8px 8px 32px;
+   text-decoration: none;
+   color: whitesmoke;
+   display: block;
+   transition: 0.3s;
+ }
+ 
+ .sidenav a:hover {
+   color: #f1f1f1;
+ }
+
+ .closebtn {
+   font-size: 2.5rem;
+ }
+
+ @media screen and (max-height: 450px) {
+   .sidenav {padding-top: 15px;}
+   .sidenav a {font-size: 18px;}
+ } 
