--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -1,10 +1,55 @@
 <nav class="navbar flex justify-between items-center w-[100%] px-3 py-5">
         <% if back%>
           <%= link_to("javascript:history.back()", class: "text-white text-2xl") do %>
-            <i class="fas fa-angle-left text-2xl text-white"></i>
+            <i class="fas fa-angle-left text-2xl text-white" ></i>
         <% end %>
         <% else%>
-            <i class="fa-solid fa-bars text-2xl text-white"></i>
+            <i class="fa-solid fa-bars text-2xl text-white" onclick="openNav()"></i>
+            <div id="mySidenav" class="sidenav">
+                <div class="cross-container flex justify-end pe-5">
+                    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                </div>
+                <div class="nav-header flex flex-col items-center justify-center">
+                    <i class="fas fa-user text-white text-2xl p-2  border-b"></i>
+                    <h2 class="text-white font-semibold uppercase p-2 text-2xl "><%= current_user.name %></h2>
+                </div>
+
+                <div class="flex items-center mt-5 ms-10">
+                    <div class="icon-container border rounded-[50%] flex justify-center items-center me-5">
+                        <i class="fas fa-gear text-white p-3"></i>
+                    </div>
+                    <div class="border-b w-[100%] p-3">
+                        <h2 class=" text-white text-lg">Setting</h2>
+                    </div>
+                </div>
+
+                <div class="flex items-center mt-5 ms-10">
+                    <div class="icon-container border rounded-[50%] flex justify-center items-center me-5">
+                        <i class="fas fa-user-check text-white p-3"></i>
+                    </div>
+                    <div class="border-b w-[100%] p-3">
+                        <h2 class=" text-white text-lg">Profile</h2>
+                    </div>
+                </div>
+
+                 <div class="flex items-center mt-5 ms-10">
+                    <div class="icon-container border rounded-[50%] flex justify-center items-center me-5">
+                        <i class="fab fa-github text-white p-3"></i>
+                    </div>
+                    <div class="border-b w-[100%] p-3">
+                        <h2 class=" text-white text-lg">Github</h2>
+                    </div>
+                </div>
+
+                 <div class="flex items-center mt-5 ms-10">
+                    <div class="icon-container border rounded-[50%] flex justify-center items-center me-5">
+                        <i class="fab fa-linkedin text-white p-3"></i>
+                    </div>
+                    <div class="border-b w-[100%] p-3">
+                        <h2 class=" text-white text-lg">Linkedin</h2>
+                    </div>
+                </div>
+            </div>
         <% end%>
 
 
@@ -41,3 +86,13 @@
     <% end %>
 
     </nav>
+
+    <script>
+function openNav() {
+  document.getElementById("mySidenav").style.width = "250px";
+}
+
+function closeNav() {
+  document.getElementById("mySidenav").style.width = "0";
+}
+</script>
