--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -16,10 +16,10 @@
 
                 <div class="flex items-center mt-5 ms-10">
                     <div class="icon-container border rounded-[50%] flex justify-center items-center me-5">
-                        <i class="fas fa-gear text-white p-3"></i>
+                        <i class="fas fa-code text-white p-3"></i>
                     </div>
                     <div class="border-b w-[100%] p-3">
-                        <h2 class=" text-white text-lg">Setting</h2>
+                        <a href="https://github.com/HtetWaiYan7191/budget-app/" target='blank'><h2 class=" text-white text-lg">Source</h2></a>
                     </div>
                 </div>
 
@@ -28,7 +28,7 @@
                         <i class="fas fa-user-check text-white p-3"></i>
                     </div>
                     <div class="border-b w-[100%] p-3">
-                        <h2 class=" text-white text-lg">Profile</h2>
+                        <a href="https://htetwaiyan19-portfolio.onrender.com/" target='blank'><h2 class=" text-white text-lg">Profile</h2></a>
                     </div>
                 </div>
 
@@ -37,7 +37,7 @@
                         <i class="fab fa-github text-white p-3"></i>
                     </div>
                     <div class="border-b w-[100%] p-3">
-                        <h2 class=" text-white text-lg">Github</h2>
+                        <a href="https://github.com/HtetWaiYan7191/" target='blank'><h2 class=" text-white text-lg">Github</h2></a>
                     </div>
                 </div>
 
@@ -46,7 +46,7 @@
                         <i class="fab fa-linkedin text-white p-3"></i>
                     </div>
                     <div class="border-b w-[100%] p-3">
-                        <h2 class=" text-white text-lg">Linkedin</h2>
+                        <a href="https://www.linkedin.com/in/htet-wai-yan19/" target='blank'><h2 class=" text-white text-lg">Linkedin</h2></a>
                     </div>
                 </div>
             </div>
