--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -91,6 +91,31 @@
    font-size: 2.5rem;
  }
 
+ .getting-started-container {
+   background-color: rgba(55, 120, 194, 0.8);
+   border-radius: 12px;
+   border: 1px solid rgb(162, 162, 162);
+ }
+
+ .no-purchase-container h2 {
+   background-color: rgba(55, 120, 194, 0.8);
+   border: 1px solid whitesmoke;
+   border-radius: 12px;
+
+ }
+
+ .getting-started-container h2 {
+   font-weight: bold;
+   color: white;
+   padding: 8px 0px;
+}
+
+ .getting-started-container p {
+   color: whitesmoke;
+   font-size: small;
+   line-height: wide
+ }
+
  @media screen and (max-height: 450px) {
    .sidenav {padding-top: 15px;}
    .sidenav a {font-size: 18px;}
