--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,7 +1,15 @@
 <section class="category-section">
     <div class="category-container"> 
         <%= render "shared/head", title: 'categories', back: false%>
+           <div class="success-fail">
+             <% if flash[:notice] %>
+                <%= render 'shared/message', message: flash[:notice], status: 'notice' %>
+            <% end %>
 
+            <% if flash[:alert] %>
+                <%= render 'shared/message', message: flash[:alert], status: 'alert' %>
+            <% end %>
+           </div>
         <% if @categories.empty?%>
         <div class="no-category-container min-h-[75vh] flex justify-center items-center">
             <div class="getting-started-container w-[95%] p-5">
@@ -29,7 +37,7 @@
 
         </div>
         <% else %>
-            <ul class="category-container min-h-[80vh] bg-gray-100 pt-5">
+            <ul class="category-container min-h-[80vh] bg-gray-100">
                 <% @categories.each do |category| %>
                     <%= link_to category_purchases_path(category_id: category.id) do%>
                         <li class="category-list w-[90%] mx-auto flex justify-between shadow-lg px-3 py-5  my-5 bg-white">
