--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -38,6 +38,14 @@
         </div>
         <% else %>
             <ul class="category-container min-h-[80vh] bg-gray-100">
+
+            <div class="search-container w-[100%] flex justify-center py-4">
+                <%= form_tag(categories_path, method: :get) do%>
+                <%= text_field_tag(:search, params[:search], placeholder: 'Search...', class: 'px-3 py-1 border-2 focus:outline-none border-blue-400') %>
+                <%= submit_tag('Search', class: 'px-3 py-1 bg-blue-400 text-white') %>
+            <% end %>
+            </div>
+
                 <% @categories.each do |category| %>
                     <%= link_to category_purchases_path(category_id: category.id) do%>
                         <li class="category-list w-[90%] mx-auto flex justify-between shadow-lg px-3 py-5  my-5 bg-white">
