--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -41,6 +41,7 @@
 
             <div class="search-container w-[100%] flex justify-center py-4">
                 <%= form_tag(categories_path, method: :get) do%>
+                  <%= hidden_field_tag(:page, params[:page]) %>
                 <%= text_field_tag(:search, params[:search], placeholder: 'Search...', class: 'px-3 py-1 border-2 focus:outline-none border-blue-400') %>
                 <%= submit_tag('Search', class: 'px-3 py-1 bg-blue-400 text-white') %>
             <% end %>
@@ -55,6 +56,7 @@
                         </li>
                     <% end %>
                 <% end %>
+                <%= paginate @categories%>
             </ul>
         <% end %>
 
